# Wing-Hunter

./: .gitignore  CMakeLists.txt  README.md
Wing-Hunter/: CMakeLists.txt  Wing-Hunter.cpp
Wing-Utils/: CMakeLists.txt  Wing-Math.cpp  Wing-Math.h  Wing-Shapes.cpp  Wing-Shapes.h  Wing-Utils.cpp  Wing-Utils.h
resources/: notAResource.txt
resources/shaders/fragment/: defaultFrag.txt
resources/shaders/vertex/: defaultVert.txt
